Revision history for Compression-Util

0.08    2024-??-??

        [ADDITIONS]

        - Added the `lzss_encode_symbolic()` and `lzss_decode_symbolic()` functions.
        - Added the `lzss_compress_symbolic()` and `lzss_decompress_symbolic()` functions.
        - Added the `$LZ_MAX_DIST` variable, which controls the maximum backreference allowed in LZ parsing.

        [IMPROVEMENTS]

        - Better compression ratio in `lz77_compress()`.

        [CHANGES]

        - Renamed `bz2_compress` and `bz2_decompress` to `bwt_compress` and `bwt_decompress`, respectively.
        - Renamed `$LZSS_MIN_LEN` to `$LZ_MIN_LEN`.
        - Renamed `$LZSS_MAX_LEN` to `$LZ_MAX_LEN`.
        - Removed the `$LZ77_MIN_LEN` and `$LZ77_MAX_LEN` variables. Using `$LZ_MIN_LEN` and `$LZ_MAX_LEN` instead.

0.07    2024-05-12

        - Use the value of `$LZ_MAX_CHAIN_LEN` in `lz77_encode_symbolic()` as well.
        - Added the following package variables:

            $Compression::Util::LZSS_MIN_LEN
            $Compression::Util::LZSS_MAX_LEN
            $Compression::Util::LZ77_MIN_LEN
            $Compression::Util::LZ77_MAX_LEN

        ...which control the minimum and maximum lenght of a match in LZSS/lZ77 encoding.
        - Added support for exporting package variables with `use Compression::Util qw($PACKAGE_VARIABLE)`.

0.06    2024-05-05

        [ADDITIONS]

        - Added the lzss_encode_fast() function.
        - Added the lz77_compress_symbolic() and lz77_decompress_symbolic() functions.

        [IMPROVEMENTS]

        - Much faster algorithm in lzss_encode() for large enough strings.
        - Much better compression ratios achived by lzss_encode().
        - Extended lzss_compress() to accept an additional optional argument, specifying the LZSS encoding method.

        [CHANGES]

        - Removed the lzhd_compress() and lzhd_decompress() functions.